@@ -67,6 +67,7 @@ $RosarioActions = array(
 	'School_Setup/PortalNotes.php|update_portal_note' => array(),
 	'School_Setup/PortalNotes.php|delete_portal_note' => array(),
 
+	'School_Setup/Rollover.php|rollover_warnings' => array(),
 	'School_Setup/Rollover.php|rollover_checks' => array(),
 	'School_Setup/Rollover.php|rollover_staff' => array(),
 	'School_Setup/Rollover.php|rollover_course_subjects' => array(),
